Changes to binary tree.

--- a/Estructuras de datos/BinaryTree/.vscode/launch.json
+++ b/Estructuras de datos/BinaryTree/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "java",
             "name": "Debug (Launch)-ArbolB",
@@ -12,10 +11,11 @@
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
             "stopOnEntry": false,
-            "mainClass": "ArbolB",
-            "args": "",
+            "mainClass": "BinaryTree",
+            "args": ""
         },
         {
+
             "type": "java",
             "name": "Debug (Attach)",
             "request": "attach",
